--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="ControleConcluintes">
+    <wb-module deploy-name="ControleConcluintes_Matheus_JVictor">
         <wb-resource deploy-path="/" source-path="/target/m2e-wtp/web-resources"/>
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="java-output-path" value="/ControleConcluintes/build/classes"/>
-        <property name="context-root" value="ControleConcluintes"/>
+        <property name="java-output-path" value="/ControleConcluintes_Matheus_JVictor/build/classes"/>
+        <property name="context-root" value="ControleConcluintes_Matheus_JVictor"/>
     </wb-module>
 </project-modules>
