--- a/.settings/org.eclipse.wst.common.component
+++ b/.settings/org.eclipse.wst.common.component
@@ -4,6 +4,6 @@
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
         <property name="java-output-path" value="/ControleConcluintes_Matheus_JVictor/build/classes"/>
-        <property name="context-root" value="ControleConcluintes_Matheus_JVictor"/>
+        <property name="context-root" value="concluintes"/>
     </wb-module>
 </project-modules>
